tests/miniJava/neg/005643_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class System.out.println java { }
